Hopefully layout shift issue.

--- a/homepage.css
+++ b/homepage.css
@@ -27,12 +27,18 @@ ul.resource-list {
  About Page
 *******************************************************************************/
 
+#section-about {
+    padding-bottom: 80px; /* Reserve space for the animated icons */
+    box-sizing: border-box;
+}
+
 img.headshot {
     width: 17vmin;
     height: 17vmin;
     border-radius: 100%;
     border: 1vmin solid #f0f0f0;
-    margin: 2vmin;
+    margin-top: 8vh;
+    margin-bottom: 0vh;
 }
 
 h1.my-name {
@@ -62,12 +68,12 @@ p.about>a:hover {
 }
 
 svg.social-icon {
-    width: 2.5vmin;
-    height: 2.5vmin;
+    width: 70px;
+    height: 70px;
     min-height: 50px;
     min-width: 50px;
     border: 0;
-    margin-top: 3vh;
+    margin-top: 50px;
     margin-left: 2vw;
     margin-right: 2vw;
     opacity: 0.6;
@@ -249,8 +255,8 @@ ul.contact-info > li {
 @-webkit-keyframes fadeInUp-transparent {
   from {
     opacity: 0;
-    -webkit-transform: translate3d(0, 100%, 0);
-    transform: translate3d(0, 100%, 0);
+    -webkit-transform: translate3d(0, 20px, 0);
+    transform: translate3d(0, 20px, 0);
   }
 
   to {
@@ -262,8 +268,8 @@ ul.contact-info > li {
 @keyframes fadeInUp-transparent {
   from {
     opacity: 0;
-    -webkit-transform: translate3d(0, 100%, 0);
-    transform: translate3d(0, 100%, 0);
+    -webkit-transform: translate3d(0, 20px, 0);
+    transform: translate3d(0, 20px, 0);
   }
 
   to {
